manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vpn-infra
  labels:
    name: vpn-infra
